FIX: Remove duplicate vertical-align rule

--- a/scss/components/_normalize.scss
+++ b/scss/components/_normalize.scss
@@ -82,7 +82,6 @@ table, tr, td, th {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 0;
-  vertical-align: top;
   text-align: left;
 }
 
